--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <!-- Feel free to change this text here -->
 <p>
-  Fork me? Fork you, @octocat!
+  Fork me? Fork you, @japollo1! Hahaha that's my edit :)
 </p>
 
 </body>
